--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,33 @@
+html {
+  /* 62.55 OF 16px i,e 10px*/
+  font-size: 62.5%;
+}
 :root {
   --colour-primay: #2584ff;
   --colour-secondary: #00d9ff;
   --colour-accent: #ff3400;
   --colour-heading: #1b0760;
   --colour-body: #918ca4;
+}
+
+body {
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  color: var(--colour-body);
+  font-size: 2.5rem;
+  line-height: 1.5;
+}
+h1,
+h2,
+h3 {
+  color: var(--colour-heading);
+}
+
+h1 {
+  font-size: 7rem;
+}
+h2 {
+  font-size: 4rem;
+}
+h3 {
+  font-size: 3rem;
 }
