--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ h1,
 h2,
 h3 {
   color: var(--colour-heading);
+  margin-bottom: 1rem;
 }
 
 h1 {
@@ -30,4 +31,21 @@ h2 {
 }
 h3 {
   font-size: 3rem;
+}
+p {
+  margin-top: 0;
+}
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.8rem;
+  }
+  h1 {
+    font-size: 8rem;
+  }
+  h2 {
+    font-size: 4rem;
+  }
+  h3 {
+    font-size: 2.4rem;
+  }
 }
