--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,9 @@ html {
 }
 
 body {
-  font-family: Inter, Arial, Helvetica, sans-serif;
   color: var(--colour-body);
-  font-size: 2.5rem;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-size: 2.4rem;
   line-height: 1.5;
 }
 h1,
@@ -56,9 +56,9 @@ a {
 }
 .link-arrow {
   color: var(--colour-accent);
-  text-transform: uppercase;
   font-size: 2rem;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 .link-arrow::after {
@@ -74,5 +74,36 @@ a {
 @media screen and (min-width: 1024px) {
   .link-arrow {
     font-size: 1.5rem;
+  }
+}
+
+/* Badges */
+.badge {
+  border-radius: 20px;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background: var(--colour-primay);
+  color: #fff;
+}
+.badge--secondary {
+  background: var(--colour-secondary);
+  color: #fff;
+}
+.badge--small {
+  font-size: 1.2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+
+  .badge--small {
+    font-size: 1.2rem;
   }
 }
