--- a/css/styles.css
+++ b/css/styles.css
@@ -133,3 +133,20 @@ a {
     padding-left: 0;
   }
 }
+
+/* Icons */
+.icon {
+  width: 40px;
+  height: 40px;
+}
+.icon--primary {
+  fill: var(--colour-primay);
+}
+.icon-conatiner {
+  background: #f3f9f8;
+  width: 64px;
+  height: 64px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
