--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ html {
   --colour-accent: #ff3400;
   --colour-heading: #1b0760;
   --colour-body: #918ca4;
+  --colour-border: #ccc;
 }
 
 body {
@@ -208,8 +209,43 @@ a {
   background: var(--colour-heading);
   color: #fff;
 }
+
 @media screen and (min-width: 1024px) {
   .btn {
+    font-size: 1.5rem;
+  }
+}
+
+/* Input */
+.input {
+  background: 1px solid #ccc;
+  border-radius: 30px;
+  color: var(--colour-heading);
+  font-size: 2rem;
+  outline: 0;
+  padding: 1.5rem 3.5rem;
+}
+
+::placeholder {
+  color: #cdcbd7;
+}
+
+.input-group {
+  border: 1px solid var(--colour-border);
+  border-radius: 30px;
+  display: flex;
+}
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+  padding: 1.5rem 1rem;
+}
+.input-group .btn {
+  margin: 4px;
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
     font-size: 1.5rem;
   }
 }
